<resources>
    <string name="post_image_transition" translatable="false">PostImageTransition</string>
    <string name="viewer_image_transition" translatable="false">ViewerImageTransition</string>

    <string name="check_internet_connection">"Check your Internet connection"</string>
    <string name="user_does_not_exist">This user does not exist</string>
    <string name="field_is_necessary"><u>Field is necessary</u></string>

    <string name="app_name" translatable="false">Improve.Map</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--  months  -->
    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <!--  nav drawer header  -->
    <string name="sample_fullname" translatable="false">Lary Davise</string>
    <string name="sample_phone_number" translatable="false">+78005553535</string>
    <string name="sample_avatar_desc" translatable="false">User\'s avatar</string>
    <string name="sample_nickname" translatable="false">\@user</string>
    <string name="sample_address" translatable="false">Russia, Kursk, Verhnyaya Lugovaya, 59</string>
    <string name="sample_date" translatable="false">15.04.2022</string>

    <!--  nav drawer item titles  -->
    <string name="menu_profile">Profile</string>
    <string name="nav_header_item_settings">Settings</string>
    <string name="menu_notification_and_sound">Notification and Sound</string>
    <string name="menu_map_features">Map Features</string>
    <string name="menu_language">Select Language</string>

    <!--  edit profile preferences  -->
    <string name="preference_summary_phone_number">Your phone number</string>
    <string name="preference_summary_nickname">Your nickname</string>
    <string name="preference_title_bio">About yourself</string>
    <string name="preference_summary_bio">Write a few words about yourself</string>
    <string name="preference_title_home">Your home-points</string>
    <string name="preference_summary_home">Tap to change your places of residence</string>
    <string name="preference_summary_email">Your email</string>

    <!--  edit profile menu item titles  -->
    <string name="menu_set_new_photo">Set new photo</string>
    <string name="menu_save_to_gallery">Save to gallery</string>
    <string name="menu_delete_photo">Delete photo</string>
    <string name="menu_log_out">Log out</string>

    <!--  auth fragment  -->
    <string name="auth_phone_hint">Enter your login</string>
    <string name="auth_password_hint">Enter your password</string>
    <string name="auth_button">Next -&gt;</string>
    <string name="remember_me_check_box">Remember me</string>

    <!--  post menu item titles  -->
    <string name="menu_copy_text">Copy</string>
    <string name="menu_forward">Forward</string>
    <string name="menu_goto_post">Go to post</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>

    <!--  menu item sorts  -->
    <string name="menu_sort_by_rates">Sort by rates</string>
    <string name="menu_sort_by_date">Sort by date</string>
    <string name="menu_sort_by_comments">Sort by comments</string>

    <!--  menu item reactions  -->
    <string name="menu_reaction_count" translatable="false">200</string>
    <string name="menu_reaction_like" translatable="false">👍</string>
    <string name="menu_reaction_dislike" translatable="false">👎</string>
    <string name="menu_reaction_love" translatable="false">❤</string>

    <!--  change addresses fragment  -->
    <string name="address_primary" translatable="false">Russia, Kursk</string>
    <string name="address_secondary" translatable="false">Centralniy okrug, Verhnyaya Lugovaya, 59</string>

    <!--  comments fragment  -->
    <string name="sample_comment" translatable="false">Pastry dragée danish jujubes icing tootsie roll. Marshmallow jelly beans toffee shortbread cupcake.</string>
    <string name="comments_count">Comments:</string>
    <string name="write_some_letters">Write some letters...</string>


    <string name="bs_long_map_coordinates">Coordinates:</string>
    <string name="bs_long_map_address">Address:</string>
    <string name="bs_long_map_add_marker">Add marker</string>
    <string name="bs_long_map_create_sub_address_marker">Create sub address marker</string>
    <string name="bs_long_map_create_address_marker">Create address marker</string>

    <string name="marker_title_hint">Marker\'s title</string>
    <string name="marker_text_hint">Marker\'s text</string>

    <string name="show_comments_branch">Show comments branch</string>
    <string name="reply">Reply</string>
    <string name="edit_profile">Edit profile</string>
    <string name="today_at">Today at</string>
    <string name="yesterday_at">Yesterday at</string>
</resources>
