<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_posts_refresh"
        android:icon="@drawable/ic_refresh"
        android:title=""
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_posts_reverse"
        android:icon="@drawable/ic_arrow_down"
        android:title=""
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_show_more"
        android:icon="@drawable/ic_show_more"
        android:title=""
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menu_sort_by_rates"
                android:title="@string/menu_sort_by_rates" />
            <item
                android:id="@+id/menu_sort_by_date"
                android:title="@string/menu_sort_by_date" />
            <item
                android:id="@+id/menu_sort_by_comments"
                android:title="@string/menu_sort_by_comments" />
        </menu>
    </item>
</menu>