<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="bindingContext"
            type="com.example.mobv2.ui.activity.mainActivity.MainActivityViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?backgroundPrimaryWindow">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                style="@style/toolbarStyle"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginTop="@dimen/toolbar_rest_margin_top"
                app:menu="@menu/menu_edit_profile"
                app:navigationIcon="@drawable/ic_arrow"
                app:popupTheme="@style/Theme.MOBv2.PopupOverlay" />
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="?backgroundSecondaryWindow"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/horizontal_margin"
            android:paddingTop="@dimen/vertical_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout2">

            <EditText
                android:id="@+id/nickname_edit_text"
                style="@style/authPasswordTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_small_margin"
                android:autofillHints="username"
                android:hint="@string/preference_summary_nickname"
                android:inputType="text"
                android:text="@={bindingContext.nickName}" />

            <EditText
                android:id="@+id/phone_number_edit_text"
                style="@style/authPasswordTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_small_margin"
                android:autofillHints="phone"
                android:hint="@string/preference_summary_phone_number"
                android:inputType="phone"
                android:text="@={bindingContext.phoneNumber}" />

            <EditText
                android:id="@+id/email_edit_text"
                style="@style/authPasswordTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_small_margin"
                android:autofillHints="emailAddress"
                android:hint="@string/preference_summary_email"
                android:inputType="textEmailAddress"
                android:text="@={bindingContext.email}" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>