<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/horizontal_margin"
                android:paddingTop="@dimen/vertical_margin">

                <TextView
                    android:id="@+id/coordinates_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bs_long_map_coordinates"
                    android:textAppearance="@style/settingsItemHeaderTextStyle"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/address_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bs_long_map_address"
                    android:textAppearance="@style/settingsItemHeaderTextStyle"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/add_marker_button"
                    style="@style/settingsItemHeaderTextStyle"
                    android:background="@drawable/ripple_effect"
                    android:text="@string/bs_long_map_add_marker"
                    android:textAllCaps="false" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="@dimen/horizontal_margin"
                        android:layout_marginTop="@dimen/vertical_margin"
                        android:layout_marginBottom="@dimen/vertical_small_margin"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/marker_title_view"
                            style="@style/authPasswordTextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Marker's title"
                            android:importantForAutofill="no"
                            android:inputType="text" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/add_image_button"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/ripple_effect"
                                android:clickable="true"
                                android:focusable="true"
                                android:paddingHorizontal="@dimen/horizontal_small_margin"
                                app:srcCompat="@drawable/ic_add"
                                app:tint="?colorPrimaryFabIcon" />

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/images_view"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                tools:itemCount="1"
                                tools:listitem="@layout/item_image" />
                        </LinearLayout>

                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:id="@+id/confirm_adding_marker_button"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginVertical="@dimen/vertical_margin"
                            android:background="@drawable/ripple_effect"
                            app:backgroundTint="?backgroundSecondaryFab"
                            app:elevation="10dp"
                            app:srcCompat="@drawable/ic_check"
                            app:tint="?colorSecondaryFabIcon" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </androidx.coordinatorlayout.widget.CoordinatorLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>